--- a/templates/nav.html
+++ b/templates/nav.html
@@ -39,7 +39,7 @@
             <!-- <a href="{{ nav_account.cart.0 }}" class="cart" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')"></a> -->
             <div id="nav-account-list" class="nav-account-list" onmouseenter="navCol('enter')" onmouseleave="navCol('leave')">
                 <div>
-                    <a class="login-btn" href="{{ nav_account.login.0 }}">Log in</a>
+                    <a class="login-btn" href="{{ nav_account.login.0 }}">Sign in</a>
                     <a class="createaccount-btn" href="{{ nav_account.createAccount.0 }}">Sign up</a>
                     <!-- <div>List</div> -->
                 </div>
